# react-native-sodium

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  package.json  react-native-sodium.podspec
android/: build.gradle
android/src/main/java/com/s77rt/rtnsodium/: RTNSodiumModule.kt  RTNSodiumPackage.kt
android/src/main/jni/: CMakeLists.txt
android/src/main/jni/rtnsodium/: JRTNSodiumModule.cpp  JRTNSodiumModule.h  OnLoad.cpp
cpp/: sodiuma.cpp  sodiuma.h  sodiuma_ho.cpp  sodiuma_ho.h
cpp/crypto_box/: crypto_box.cpp  crypto_box.h
cpp/crypto_generichash/: crypto_generichash.cpp  crypto_generichash.h
cpp/crypto_shorthash/: crypto_shorthash.cpp  crypto_shorthash.h
cpp/crypto_sign/: crypto_sign.cpp  crypto_sign.h
cpp/randombytes/: randombytes.cpp  randombytes.h
cpp/sodium/: core.cpp  core.h  utils.cpp  utils.h
ios/: RTNSodium.h  RTNSodium.mm
js/: NativeRTNSodium.ts  helpers.ts  index.ts
scripts/: postpack.sh  prepack.sh  prepare.sh
